Modify : 팀 관련 API url 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -1,6 +1,6 @@
 # 팀 관련
 
-## 프로젝트 선택 시 (팀 생성 페이지)
+## 프로젝트 선택 시 (팀 생성 페이지) (삭제 예정)
 
 | TYPE |         URL         | TOKEN |
 | :--: | :-----------------: | :---: |
@@ -47,9 +47,9 @@
 
 ## CREATE | 팀 생성 요청
 
-| TYPE |         URL         | TOKEN |
-| :--: | :-----------------: | :---: |
-| POST | /api/auth/team/info |   O   |
+| TYPE |       URL       | TOKEN |
+| :--: | :-------------: | :---: |
+| POST | /api/auth/teams |   O   |
 
 ### Request
 
@@ -98,9 +98,9 @@
 
 ## READ | 팀 상세 정보 페이지
 
-| TYPE |             URL             | TOKEN |
-| :--: | :-------------------------: | :---: |
-| GET  | /api/auth/team/info/:teamId |   O   |
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| GET  | /api/auth/teams/:teamId |   O   |
 
 ### Request
 
@@ -213,9 +213,9 @@
 
 ## UPDATE | 팀 상세 정보 수정 요청
 
-| TYPE |             URL             | TOKEN |
-| :--: | :-------------------------: | :---: |
-| PUT  | /api/auth/team/info/:teamId |   O   |
+| TYPE |           URL           | TOKEN |
+| :--: | :---------------------: | :---: |
+| PUT  | /api/auth/teams/:teamId |   O   |
 
 ### Request
 
@@ -276,9 +276,9 @@
 
 ## DELETE | 팀 삭제
 
-|  TYPE  |             URL             | TOKEN |
-| :----: | :-------------------------: | :---: |
-| DELETE | /api/auth/team/info/:teamId |   O   |
+|  TYPE  |           URL           | TOKEN |
+| :----: | :---------------------: | :---: |
+| DELETE | /api/auth/teams/:teamId |   O   |
 
 ### Request
 
@@ -322,9 +322,9 @@
 
 ## READ | 팀 리스트 요청
 
-| TYPE |             URL             | TOKEN |
-| :--: | :-------------------------: | :---: |
-| get  | /api/auth/project/team-list |   O   |
+| TYPE |       URL       | TOKEN |
+| :--: | :-------------: | :---: |
+| get  | /api/auth/teams |   O   |
 
 ### Request
 
@@ -401,9 +401,9 @@
 
 ## DELETE | 팀 탈퇴
 
-|  TYPE  |             URL              | TOKEN |
-| :----: | :--------------------------: | :---: |
-| DELETE | /api/auth/team/leave/:teamId |   O   |
+|  TYPE  |              URL              | TOKEN |
+| :----: | :---------------------------: | :---: |
+| DELETE | /api/auth/teams/:teamId/leave |   O   |
 
 ## Request
 
