Modify : 프로잭트 관련 API url 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -146,9 +146,9 @@
 
 ## 팀 지원 요청 (사용자 -> 팀)
 
-| TYPE |           URL           | TOKEN |
-| :--: | :---------------------: | :---: |
-| POST | /api/auth/requests/user |   O   |
+| TYPE |           URL            | TOKEN |
+| :--: | :----------------------: | :---: |
+| POST | /api/auth/requests/users |   O   |
 
 ### Request
 
@@ -224,9 +224,9 @@
 
 ## 팀 합류 요청 (팀 (팀장) -> 사용자)
 
-| TYPE |           URL           | TOKEN |
-| :--: | :---------------------: | :---: |
-| POST | /api/auth/requests/team |   O   |
+| TYPE |           URL            | TOKEN |
+| :--: | :----------------------: | :---: |
+| POST | /api/auth/requests/teams |   O   |
 
 ### Request
 
