Modify : 프로잭트 관련 API url 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -2,9 +2,9 @@
 
 ## 프로젝트 트랙 선택
 
-| TYPE |                  URL                  | TOKEN |
-| :--: | :-----------------------------------: | :---: |
-| POST | /api/auth/users/:userId/project-track |   O   |
+| TYPE |                  URL                   | TOKEN |
+| :--: | :------------------------------------: | :---: |
+| POST | /api/auth/users/:userId/project-tracks |   O   |
 
 ### Request
 
@@ -74,9 +74,9 @@
 
 ## 프로젝트 트랙 수정
 
-| TYPE |                  URL                  | TOKEN |
-| :--: | :-----------------------------------: | :---: |
-| PUT  | /api/auth/users/:userId/project-track |   O   |
+| TYPE |                  URL                   | TOKEN |
+| :--: | :------------------------------------: | :---: |
+| PUT  | /api/auth/users/:userId/project-tracks |   O   |
 
 ### Request
 
