Modify : 프로젝트 관련, 팀 관련 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -86,6 +86,16 @@
 }
 ```
 
+- 팀 생성 권한 없음 (토큰 없음)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "팀 생성 권한이 없습니다."
+}
+```
+
 - 팀 생성 실패 (서버 문제)
 
 ```json
@@ -183,9 +193,9 @@
 
 ```json
 {
-  "status": 403,
+  "status": 401,
   "success": false,
-  "message": "토큰이 유효하지 않습니다."
+  "message": "팀 상세 정보 조회 권한이 없습니다."
 }
 ```
 
@@ -256,7 +266,7 @@
 
 ```json
 {
-  "status": 400,
+  "status": 403,
   "success": false,
   "message": "사용자는 정보를 수정할 수 있는 권한이 없습니다."
 }
@@ -302,7 +312,7 @@
 
 ```json
 {
-  "status": 400,
+  "status": 403,
   "success": false,
   "meesage": "사용자는 팀 삭제 권한이 없습니다."
 }
@@ -417,6 +427,16 @@
 {
   "success": true,
   "message": "탈퇴 처리가 완료되었습니다."
+}
+```
+
+- 팀을 탈퇴할 수 있는 권한 없을 때(토큰 오류)
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "팀을 탈퇴할 수 있는 권한이 없습니다."
 }
 ```
 
