Modify : 팀 관련 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -86,13 +86,23 @@
 }
 ```
 
-- 팀 생성 권한 없음 (토큰 없음)
+- 팀 생성 권한 없음 (토큰 없음 / 로그인 x)
 
 ```json
 {
   "status": 401,
   "success": false,
   "message": "팀 생성 권한이 없습니다."
+}
+```
+
+- 팀에 이미 합류되어 있을 시 (토큰 오류 / 로그인 o)
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "해당 프로젝트 팀에 이미 합류되어 있어 팀 생성이 불가능합니다."
 }
 ```
 
