--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -92,7 +92,7 @@
 {
   "status": 401,
   "success": false,
-  "message": "팀 생성 권한이 없습니다."
+  "message": "팀 생성 권한이 없습니다. 로그인 후 이용 가능합니다."
 }
 ```
 
@@ -199,13 +199,13 @@
 }
 ```
 
-- 팀 상세 정보 받아오기 실패 시 (유효하지 않는 토큰)
+- 팀 상세 정보 받아오기 실패 시 (로그인 x, 토큰 x)
 
 ```json
 {
   "status": 401,
   "success": false,
-  "message": "팀 상세 정보 조회 권한이 없습니다."
+  "message": "팀 상세 정보 조회 권한이 없습니다. 로그인 후 이용 가능합니다."
 }
 ```
 
@@ -272,13 +272,23 @@
 }
 ```
 
+- 로그인이 안 되어 있을 시
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "팀 상세 정보 수정 권한이 없습니다."
+}
+```
+
 - 팀 상세 정보 수정 권한 없음
 
 ```json
 {
   "status": 403,
   "success": false,
-  "message": "사용자는 정보를 수정할 수 있는 권한이 없습니다."
+  "message": "팀 상세 정보 수정 권한이 없습니다."
 }
 ```
 
@@ -409,13 +419,23 @@
 
 > isRecruiting : true 일 때 모집 중 false 일 때 모집 마감
 
+- 로그인 안 되어 있을 시
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "meesage": "팀 공고 조회 권한이 없습니다. 로그인 후 이용 가능합니다."
+}
+```
+
 - 서버 처리 실패
 
 ```json
 {
   "status": 500,
   "success": false,
-  "meesage": "Internal Server, 팀 리스트 조회 실패"
+  "meesage": "Internal Server, 팀 공고 조회 실패"
 }
 ```
 
