Modify : 프로젝트 관련 API 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -161,6 +161,16 @@
 
 ### Response
 
+- 토큰 없을 시 (로그인 x)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "팀 지원 권한이 없습니다. 로그인 후 이용 가능합니다."
+}
+```
+
 - 지원 성공 시
 
 ```json
@@ -176,7 +186,7 @@
 {
   "status": 403,
   "success": false,
-  "message": "토큰이 유효하지 않습니다."
+  "message": "팀 지원 권한이 없습니다."
 }
 ```
 
