Modify : 프로젝트 관련, 교육생 관련 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -152,13 +152,13 @@
 }
 ```
 
-- 교육생 상세 정보 받아오기 실패 시 (유효하지 않는 토큰)
+- 토큰 없음 (로그인 안 되어 있을 시)
 
 ```json
 {
   "status": 401,
   "success": false,
-  "message": "토큰이 유효하지 않습니다."
+  "message": "해당 교육생 정보 조회 권한이 없습니다. 로그인 후 이용 가능합니다."
 }
 ```
 
@@ -293,7 +293,7 @@
 
 | TYPE |       URL       | TOKEN |
 | :--: | :-------------: | :---: |
-| get  | /api/auth/users |   O   |
+| GET  | /api/auth/users |   O   |
 
 ### Request
 
@@ -318,7 +318,7 @@
 
 ```json
 {
-  "users": [
+  "userList": [
     {
       "userId": 4,
       "profileImgUrl": "C:\\image\\team_image\\default_img.jpg",
@@ -370,13 +370,23 @@
 }
 ```
 
+- 로그인 안 되어 있을 시(토큰 없음)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "교육생 공고 조회 권한이 없습니다. 로그인 후 이용 가능합니다."
+}
+```
+
 - 서버 처리 실패
 
 ```json
 {
   "status": 500,
   "success": false,
-  "meesage": "Internal Server, 팀 리스트 조회 실패"
+  "meesage": "Internal Server, 교육생 공고 조회 실패"
 }
 ```
 
@@ -420,13 +430,23 @@
   },
 ```
 
+- 토큰 유효하지 않을 시
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "내 프로젝트 정보 조회 권한이 없습니다."
+}
+```
+
 - 서버 오류
 
 ```json
 {
   "status": 500,
   "success": false,
-  "message": "Internal Server Error, 프로젝트 정보 갱신 실패"
+  "message": "Internal Server Error, 내 프로젝트 정보 갱신 실패"
 }
 ```
 
@@ -468,7 +488,7 @@
 {
   "status": 403,
   "success": false,
-  "message": "토큰이 유효하지 않습니다."
+  "message": "내 팀 아이디 조회 권한이 없습니다."
 }
 ```
 
