--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -40,13 +40,23 @@
 }
 ```
 
+- 토큰 없을 시 (로그인 안 되어 있을 때)
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "트랙 선택 권한이 없습니다. 로그인 후 이용 가능합니다."
+}
+```
+
 - 유효하지 않는 토큰
 
 ```json
 {
   "status": 403,
   "success": false,
-  "message": "토큰이 유효하지 않습니다."
+  "message": "트랙 선택 권한이 없습니다."
 }
 ```
 
