Modify : 교육생 API response 값 오타 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -318,7 +318,7 @@
 
 ```json
 {
-  "userList": [
+  "users": [
     {
       "userId": 4,
       "profileImgUrl": "C:\\image\\team_image\\default_img.jpg",
