Modify : 아이디 찾기 res 메시지 수정

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -99,7 +99,7 @@
 {
   "success": true,
   "userEmail": "sugarfina637@naver.com",
-  "message": "고객님의 싸피메이트 계정을 찾았습니다.\n 아이디 확인 후 로그인 해주세요."
+  "message": "고객님의 싸피메이트 계정을 찾았습니다."
 }
 ```
 
