Modify : 비밀번호 재설정 API URL 수정

--- a/api/로그인 페이지.md
+++ b/api/로그인 페이지.md
@@ -178,7 +178,7 @@
 
 | TYPE |         URL         | TOKEN |
 | :--: | :-----------------: | :---: |
-| POST | /api/user/pw-search |   X   |
+| POST | /api/users/password/new |   X   |
 
 ### Request
 
@@ -235,7 +235,7 @@
 
 | TYPE |         URL         | TOKEN |
 | :--: | :-----------------: | :---: |
-| PUT  | /api/user/pw-search |   X   |
+| PUT  | /api/users/password/new |   X   |
 
 ### Request
 
