--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -231,6 +231,76 @@
 
 <br />
 
+## READ | 팀 상세 정보 수정 데이터 요청
+
+| TYPE |             URL              | TOKEN |
+| :--: | :--------------------------: | :---: |
+| GET  | /api/auth/teams/:teamId/edit |   O   |
+
+### Request
+
+{}
+
+### Response
+
+```json
+{
+  "teamId": 1,
+  "teamName": "디벨로파시토",
+  "teamImgUrl": "/images/common/ssafy-mate_logo.png",
+  "campus": "서울",
+  "project": "공통 프로젝트",
+  "projectTrack": "웹 기술",
+  "notice": "실제 운영할 서비스 개발을 도전할 분들을 모집합니다.",
+  "introduction": "실사용자를 받는 플랫폼 개발에 도전하실 분들을 찾고 있습니다. 개발 효율성을 높이기 위해 API First Design 설계 방식으로 진행하려고 합니다. 서버에서는 Swagger를 이용하여 API 테스트를 진행하고, 클라이언트 팀은 정식 API가 배포되기 이전까지 Mock Service Worker를 이용하여 Mock을 만들어 개발을 진행하려고 합니다.",
+  "techStacks": [
+    {
+      "id": 1,
+      "techStackName": "HTML5",
+      "techStackImgUrl": "/images/assets/tech-stack/HTML5.png"
+    },
+    {
+      "id": 2,
+      "techStackName": "CSS3",
+      "techStackImgUrl": "/images/assets/tech-stack/CSS3.png"
+    },
+    {
+      "id": 43,
+      "techStackName": "Vuex",
+      "techStackImgUrl": "/images/assets/tech-stack/Vuex.png"
+    }
+  ],
+  "totalRecruitment": 6,
+  "totalHeadcount": 3,
+  "frontendRecruitment": 3,
+  "frontendHeadcount": 2,
+  "backendRecruitment": 3,
+  "backendHeadcount": 1
+}
+```
+
+- 권한이 없을 때
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "팀을 수정할 수 있는 권한이 없습니다."
+}
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server, 팀 수정 페이저 접근 실패"
+}
+```
+
+<br />
+
 ## UPDATE | 팀 상세 정보 수정 요청
 
 | TYPE |           URL           | TOKEN |
@@ -278,7 +348,7 @@
 {
   "status": 401,
   "success": false,
-  "message": "팀 상세 정보 수정 권한이 없습니다."
+  "message": "로그인 후 이용 가능합니다."
 }
 ```
 
@@ -316,15 +386,13 @@
 {}
 ```
 
-> params
-
 ### Response
 
 - 팀 삭제 성공
 
 ```json
 {
-  "meesage": "팀 삭제가 완료되었습니다."
+  "meesage": "새로운 팀에 지원해보세요."
 }
 ```
 
@@ -334,7 +402,7 @@
 {
   "status": 403,
   "success": false,
-  "meesage": "사용자는 팀 삭제 권한이 없습니다."
+  "message": "팀을 삭제할 수 있는 권한이 없습니다."
 }
 ```
 
@@ -344,7 +412,7 @@
 {
   "status": 500,
   "success": false,
-  "meesage": "Internal Server, 팀 삭제 실패"
+  "message": "Internal Server, 팀 삭제 처리 실패"
 }
 ```
 
