Modify : 팀 정보 수정 API 수정

--- a/api/팀 관련.md
+++ b/api/팀 관련.md
@@ -312,6 +312,7 @@
 ```json
 {
   "teamImg": "팀 이미지.png(파일 형태)",
+  "teamImgUrl": "/url"
   "campus": "서울",
   "project": "특화 프로젝트",
   "projectTrack": "빅데이터",
@@ -324,6 +325,8 @@
   "backendRecruitment": 3
 }
 ```
+
+> 팀 이미지가 그대로 이면 teamImg(x) teamImgUrl(o) | 팀 이미지 바꼈으면 teamImg 만 | 팀 이미지 삭제 시 둘다 안 보내는 방식 
 
 > 선택 항목 : introduction
 
