Modify : 교육생 관련 api 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -458,6 +458,10 @@
 | :--: | :-----------------------------: | :---: |
 | GET  | /api/auth/users/:userId/team-id |   O   |
 
+| TYPE |               URL               | TOKEN |
+| :--: | :-----------------------------: | :---: |
+| GET  | /api/auth/users/:userId/my-team |   O   |
+
 ### Request
 
 ```json
@@ -478,7 +482,75 @@
 
 ```json
 {
-  "teamId": null
+  "teamData": {
+    "teamId": 1,
+    "teamName": "싸피메이트",
+    "teamImgUrl": "URL 형식",
+    "owner": {
+      "userId": 1,
+      "userName": "박정환"
+    },
+    "campus": "서울",
+    "project": "특화 프로젝트",
+    "projectTrack": "빅데이터",
+    "notice": "최우수상에 도전할 팀원을 모집합니다.",
+    "introduction": "환상의 호흡으로 프로젝트 진행해 보고 싶습니다. 백엔드는 ... 프론트는 ... 이런 식으로 개발 진행하려고 합니다.",
+    "techStacks": [
+      {
+        "id": 1,
+        "techStackName": "JavaScript",
+        "techStackImgUrl": "이미지 url"
+      },
+      {
+        "id": 2,
+        "techStackName": "JPA",
+        "techStackImgUrl": "이미지 url"
+      },
+      {
+        "id": 3,
+        "techStackName": "Spring Boot",
+        "techStackImgUrl": "이미지 url"
+      }
+    ],
+    "members": [
+      {
+        "userId": 1,
+        "userName": "박정환",
+        "profileImgUrl": "프로필 이미지 URL",
+        "ssafyTrack": "Java Track",
+        "job1": "프론트엔드 (Front-end)"
+      },
+      {
+        "userId": 2,
+        "userName": "이정훈",
+        "profileImgUrl": "프로필 이미지 URL",
+        "ssafyTrack": "Java Track",
+        "job1": "백엔드 (Back-end)"
+      },
+      {
+        "userId": 3,
+        "userName": "소정은",
+        "profileImgUrl": "프로필 이미지 URL",
+        "ssafyTrack": "Java Track",
+        "job1": "프론트엔드 (Front-end)"
+      }
+    ],
+    "totalRecruitment": 6,
+    "totalHeadcount": 5,
+    "frontendRecruitment": 3,
+    "frontendHeadcount": 3,
+    "backendRecruitment": 3,
+    "backendHeadcount": 2,
+    "createDateTime": "2022-01-24"
+  },
+  "role": "owner | member | outsider"
+}
+```
+
+```json
+{
+  "teamData": null,
+  "role": null
 }
 ```
 
@@ -492,6 +564,14 @@
 }
 ```
 
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "내 팀 정보 조회 권한이 없습니다."
+}
+```
+
 - 서버 처리 실패
 
 ```json
@@ -499,5 +579,13 @@
   "status": 500,
   "success": false,
   "meesage": "Internal Server, 내 팀 아이디 조회 실패"
+}
+```
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 내 팀 정보 조회 실패"
 }
 ```
