Modify : 교육생 관련 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -456,11 +456,8 @@
 
 | TYPE |               URL               | TOKEN |
 | :--: | :-----------------------------: | :---: |
-| GET  | /api/auth/users/:userId/team-id |   O   |
+| GET  | /api/auth/users/:userId/belong-to-team |   O   |
 
-| TYPE |               URL               | TOKEN |
-| :--: | :-----------------------------: | :---: |
-| GET  | /api/auth/users/:userId/my-team |   O   |
 
 ### Request
 
@@ -476,9 +473,50 @@
 
 ```json
 {
-  "teamId": 2
+  "belongToTeam": true
 }
 ```
+
+
+- 유효하지 않는 토큰
+
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "팀 합류 여부 조회 권한이 없습니다."
+}
+```
+
+- 서버 처리 실패
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "meesage": "Internal Server, 팀 합류 여부 조회 실패"
+}
+```
+
+
+<br />
+
+| TYPE |               URL               | TOKEN |
+| :--: | :-----------------------------: | :---: |
+| GET  | /api/auth/users/:userId/my-team |   O   |
+
+
+### Request
+
+```json
+{
+  "project": "특화 프로젝트"
+}
+```
+
+### Response
+
 
 ```json
 {
@@ -554,16 +592,6 @@
 }
 ```
 
-- 유효하지 않는 토큰
-
-```json
-{
-  "status": 403,
-  "success": false,
-  "message": "내 팀 아이디 조회 권한이 없습니다."
-}
-```
-
 ```json
 {
   "status": 403,
@@ -574,13 +602,6 @@
 
 - 서버 처리 실패
 
-```json
-{
-  "status": 500,
-  "success": false,
-  "meesage": "Internal Server, 내 팀 아이디 조회 실패"
-}
-```
 
 ```json
 {
@@ -589,3 +610,4 @@
   "meesage": "Internal Server, 내 팀 정보 조회 실패"
 }
 ```
+
