Modify : 교육생 관련 API 수정

--- a/api/교육생 관련.md
+++ b/api/교육생 관련.md
@@ -452,7 +452,7 @@
 
 <br />
 
-## READ | 교육생 팀 아이디 조회
+## READ | 교육생 트랙별 팀 합류 여부 조회
 
 | TYPE |               URL               | TOKEN |
 | :--: | :-----------------------------: | :---: |
@@ -501,6 +501,8 @@
 
 
 <br />
+
+## 교육생 트력별 합류된 팀 정보 
 
 | TYPE |               URL               | TOKEN |
 | :--: | :-----------------------------: | :---: |
