Modify : 받은, 보낸 요청 리스트 API 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -360,7 +360,7 @@
       "notice": "개발개발",
       "teamName": "팀 싸피",
       "campus": "서울",
-      "readCheck": "pending",
+      "requestStatus": "pending",
       "message": " 참여하고 싶습니다. ",
       "creatTime": "2022-02-10T23:14:29.449"
     }
@@ -381,7 +381,7 @@
       "campus": "서울",
       "ssafyTrack": "Java Track",
       "job1": "프론트엔드 (Front-end)",
-      "readCheck": "pending",
+      "requestStatus": "pending",
       "message": " 같이 하고 싶습니다. "
       "creatTime": "2022-02-10T23:14:29.449"
     },
@@ -393,7 +393,7 @@
       "campus": "서울",
       "ssafyTrack": "Java Track",
       "job1": "프론트엔드 (Front-end)",
-      "readCheck": "pending",
+      "requestStatus": "pending",
       "message": " 같이 하고 싶습니다. "
       "creatTime": "2022-02-10T23:14:29.449"
     }
@@ -452,7 +452,7 @@
       "notice": "개발개발",
       "teamName": "팀 싸피",
       "campus": "서울",
-      "readCheck": "pending",
+      "requestStatus": "pending",
       "message": " 같이 하고 싶습니다. ",
       "creatTime": "2022-02-10T23:12:24.988"
     }
@@ -473,7 +473,7 @@
       "campus": "서울",
       "ssafyTrack": "Java Track",
       "job1": "백엔드 (Back-end)",
-      "readCheck": "pending",
+      "requestStatus": "pending",
       "message": " 참여하고 싶습니다. "
       "creatTime": "2022-02-10T23:14:29.449"
     },
@@ -485,7 +485,7 @@
       "campus": "서울",
       "ssafyTrack": "Java Track",
       "job1": "프론트엔드 (Front-end)",
-      "readCheck": "pending",
+      "requestStatus": "pending",
       "message": " 참여하고 싶습니다. "
       "creatTime": "2022-02-10T23:14:29.449"
     }
