Add : 사용자 정보 불러오기 API 추가

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -166,3 +166,20 @@
   []
 
 ```
+
+## 사용자 정보 불러오기
+### Request
+| TYPE |      URL      | TOKEN |
+| :--: | :-----------: | :---: |
+| GET  | /api/chats/info/{userId} |   X   |
+
+### Response
+```json
+{
+    "userId": 1,
+    "userName":"소정은"
+    "userEmail":"tip0000@gmail.com"
+    "profileImgUrl": 이미지url
+}
+``` 
+
