Modify : 사용자 정보 불러오기 url 수정, 대화 내용 불러오기 reponse 수정

--- a/api/채팅.md
+++ b/api/채팅.md
@@ -112,8 +112,8 @@
 
 ```json
 
- [
-    {
+ { 
+      contentList : [{
       "id": 55,
       "roomId": "1-2"
       "content": "추가 데이터11",
@@ -152,8 +152,10 @@
       "userName": "손영배",
       "sentTime": "2022-01-17T17:03:44.336763",
       "senderId": 1
-    }
-  ]
+    }]
+    
+    "nextCursor" : 50
+  }
 
 ```
 
@@ -171,7 +173,7 @@
 ### Request
 | TYPE |      URL      | TOKEN |
 | :--: | :-----------: | :---: |
-| GET  | /api/chats/info/{userId} |   X   |
+| GET  | /api/chats/infos/{userId} |   X   |
 
 ### Response
 ```json
