--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -510,3 +510,93 @@
   "message": "Internal Server Error, 받은 요청 리스트 요청 실패"
 }
 ```
+
+<br />
+
+## 제안 수락/거절/취소
+
+| TYPE |               URL            | TOKEN |
+| :--: | :--------------------------: | :---: |
+| PUT  | /api/auth/requests/responses |   O   |
+
+### Request
+
+```json
+{
+  "requestId": 1,
+  "response": "approval | rejection | cancellation"
+}
+```
+
+### Response
+
+- 요청 성공 시
+
+```json
+{
+  "success": true,
+  "message": "제안 응답이 완료되었습니다."
+}
+```
+
+- 유효하지 않는 토큰
+
+```json
+{
+  "status": 401,
+  "success": false,
+  "message": "로그인이 필요합니다."
+}
+```
+
+- 기타 오류
+
+```json
+{
+  "status": 403,
+  "success": false,
+  "message": "응답 권한이 없습니다."
+}
+```
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "해당 팀은 팀원 모집이 마감되었습니다."
+}
+```
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "사용자는 이미 팀에 속해있어 응답이 불가능합니다."
+}
+```
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "이미 처리된 제안 입니다."
+}
+```
+
+```json
+{
+  "status": 409,
+  "success": false,
+  "message": "해당 교육생은 이미 다른 팀에 합류되어 있습니다."
+}
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 제안 요청 응답 실패"
+}
+```
