Modify : 요청 응답 API 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -535,9 +535,18 @@
 ```json
 {
   "success": true,
-  "message": "제안 응답이 완료되었습니다."
+  "message": "응답 완료"
 }
 ```
+
+
+```json
+{
+  "success": true,
+  "message": "요청 취소 완료"
+}
+```
+
 
 - 유효하지 않는 토큰
 
