Modify : 받은 요청 및 제안 API 수정

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -356,7 +356,7 @@
   "requests": [
     {
       "requestId": 1,
-      "orginType": "user | team",
+      "originType": "user | team",
       "originId": 1,
       "originImgUrl": "C:\\image\\oo_image\\default_img.jpg",
       "originName": "이름",
@@ -367,7 +367,7 @@
     }
     {
       "requestId": 2,
-      "orginType": "user | team",
+      "originType": "user | team",
       "originId": 1,
       "originImgUrl": "C:\\image\\oo_image\\default_img.jpg",
       "originName": "이름",
