Add : 요청 메세지 안보기 API 추가

--- a/api/프로젝트 관련.md
+++ b/api/프로젝트 관련.md
@@ -638,3 +638,40 @@
   "message": "Internal Server Error, 제안 요청 응답 실패"
 }
 ```
+
+<br />
+
+## 제안 수락/거절/취소
+
+| TYPE |                   URL                   | TOKEN |
+| :--: | :-------------------------------------: | :---: |
+| PUT  | /api/auth/requests/read-check/:requestId|   O   |
+
+### Request
+
+```json
+{
+}
+```
+
+### Response
+
+- 요청 성공 시
+
+```json
+{
+  "message": "제안 안보기 성공"
+}
+```
+
+```
+
+- 서버 오류
+
+```json
+{
+  "status": 500,
+  "success": false,
+  "message": "Internal Server Error, 실패"
+}
+```
