--- a/api/채팅.md
+++ b/api/채팅.md
@@ -200,12 +200,32 @@
 
 ```
 
-- 대화 내용이 없는 경우
+- 대화 내용 불러오기 성공(대화 내용이 없는 경우)
 
 ```json
 
   []
 
+```
+
+- 대화 내용 불러오기 실패(roomId가 null일 때)
+
+```json
+{
+  "status": 400,
+  "success": false,
+  "message": "선택된 대화 내용이 없습니다."
+}
+```
+
+- 대화 내용 불러오기 실패(방 생성 실패)
+
+```json
+{
+  "status": 400,
+  "success": false,
+  "message": "방 생성에 실패하였습니다."
+}
 ```
 
 - 대화 내용 불러오기 실패(로그인 필요)
